[package]
name = "tunnel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = { version = "0.10.1", features = ["aes"] }
async-trait = "0.1.68"
ed25519-dalek = "1.0.1"
rand = "0.8.5"
rand_core = { version = "0.6.4", features = ["std"] }
zeroize = { version = "1.6.0", features = ["zeroize_derive"] }
